tests: migro a doctest

--- a/tests/unit-tests/makefile
+++ b/tests/unit-tests/makefile
@@ -1,19 +1,19 @@
 RM=rm -rf
+CPP=g++
 CC=gcc
 
 BASE_DIR=../..
 
-C_SPEC=$(BASE_DIR)/cspec
-C_SPEC_BIN=$(C_SPEC)/release
-C_SPEC_SO=$(C_SPEC_BIN)/libcspecs.so
+DOCTEST=/usr/local/include/doctest.h
 
 COMMONS=$(BASE_DIR)/src
 COMMONS_BIN=$(COMMONS)/build
 COMMONS_SO=$(COMMONS_BIN)/libcommons.so
-COMMONS_SRCS=$(patsubst ./%,$(COMMONS)/%,$(shell make --no-print-directory -C $(COMMONS) sources)) 
+COMMONS_SRCS=$(patsubst ./%,$(COMMONS)/%,$(shell make --no-print-directory -C $(COMMONS) sources))
 
-C_SRCS=$(shell find . -iname "*.c" | tr '\n' ' ')
-OBJS=$(C_SRCS:./%.c=build/%.o)
+C_SRCS=$(shell find src -iname "*.c")
+CPP_SRCS=$(shell find tests -iname "*.cpp")
+OBJS=$(C_SRCS:src/%.c=build/%.o) $(CPP_SRCS:tests/%.cpp=build/%.o)
 
 BIN_DIR=build
 BIN=$(BIN_DIR)/commons-unit-test
@@ -23,11 +23,14 @@ all: $(BIN)
 $(BIN_DIR):
 	mkdir -p $@
 
-$(BIN): $(C_SPEC_SO) $(COMMONS_SO) $(BIN_DIR) $(OBJS)
-	$(CC) -L"$(COMMONS_BIN)" -L"$(C_SPEC_BIN)" -o "$@" $(OBJS) -lcommons -lcspecs
+$(BIN): $(DOCTEST) $(COMMONS_SO) $(BIN_DIR) $(OBJS)
+	$(CPP) -L"$(COMMONS_BIN)" -Wl,-rpath,"$(COMMONS_BIN)" -o "$@" src/main.cpp $(OBJS) -lcommons
 
-build/%.o: ./%.c
-	$(CC) -I"$(COMMONS)" -I"$(C_SPEC)" -c -fmessage-length=0 -fPIC -MMD -MP -MF"$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -o "$@" "$<"
+build/%.o: tests/%.cpp
+	$(CPP) -std=gnu++11 -I"$(COMMONS)" -c -Wno-write-strings -o "$@" "$<"
+
+build/%.o: src/%.c
+	$(CC) -I"$(COMMONS)" -c -fmessage-length=0 -fPIC -MMD -MP -MF"$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -o "$@" "$<"
 
 debug: CC += -DDEBUG -g
 debug: all
@@ -36,16 +39,15 @@ clean:
 	$(RM) build
 
 test: all
-	LD_LIBRARY_PATH="$(COMMONS_BIN):$(C_SPEC_BIN)" ./$(BIN)
+	LD_LIBRARY_PATH="$(COMMONS_BIN)" ./$(BIN)
 
 $(COMMONS_SO): $(COMMONS_SRCS)
-	-cd $(COMMONS) && $(MAKE) all
+	$(MAKE) -C $(COMMONS) all
 
-$(C_SPEC_SO):
-	-cd $(BASE_DIR) && git submodule init && git submodule update
-	-cd $(C_SPEC) && $(MAKE) all
+$(DOCTEST):
+	wget -qO- https://raw.githubusercontent.com/doctest/doctest/v2.4.9/doctest/doctest.h | sudo tee $@ > /dev/null
 
 valgrind: debug
-	LD_LIBRARY_PATH="$(COMMONS_BIN)/:$(C_SPEC_BIN)" valgrind --error-exitcode=42 --leak-check=full -v ./$(BIN)
+	LD_LIBRARY_PATH="$(COMMONS_BIN)/" valgrind --error-exitcode=42 --leak-check=full -v ./$(BIN)
 
 .PHONY: all debug clean test valgrind
